--- a/Amozegar/Amozegar.csproj
+++ b/Amozegar/Amozegar.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+	  <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.4" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="9.0.4" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.4">
