--- a/Amozegar/Amozegar.csproj
+++ b/Amozegar/Amozegar.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\Shared\Views\Shared\" />
     <Folder Include="wwwroot\fonts\webfonts\" />
     <Folder Include="wwwroot\images\home\" />
     <Folder Include="wwwroot\images\classes\" />
