--- a/Amozegar/Amozegar.csproj
+++ b/Amozegar/Amozegar.csproj
@@ -7,7 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Areas\Shared\Views\Shared\" />
+    <Compile Remove="Areas\Shared\Views\Shared\**" />
+    <Content Remove="Areas\Shared\Views\Shared\**" />
+    <EmbeddedResource Remove="Areas\Shared\Views\Shared\**" />
+    <None Remove="Areas\Shared\Views\Shared\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\fonts\webfonts\" />
     <Folder Include="wwwroot\images\home\" />
     <Folder Include="wwwroot\images\classes\" />
