--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,11 @@
 *.vspscc
 *.vssscc
 
-**/images/
-!**/images/classes/classes.png
-!**/images/home
-!**/images/users/user.webp
+**/images/**
 
+!**/images/
+!**/images/classes/
+!**/images/classes/classes.png
+!**/images/home/
+!**/images/users/
+!**/images/users/user.webp
