Edit .gitignore again for home pictures

--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,6 @@
 !**/images/classes/
 !**/images/classes/classes.png
 !**/images/home/
+!**/images/home/*.*
 !**/images/users/
 !**/images/users/user.webp
